--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^3.0.1",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
